--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
 <h1>Hola Ricardo</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Hola Bienvenido</h1>
+<% if current_user %>
+    Haz entrado como:  <%= current_user.email %>
+    <%= link_to 'Cerrar sesion', destroy_user_session_path, method: 'delete' %>
+<%end%>
