--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -40,7 +40,7 @@
 			<div class="round-image-50">
 				<%= image_tag(@category.avatar3.url(:thumb)) %>					
 			</div>
-	<%= button_to 'Volver', category_path, method: :get %>
+	<%= button_to 'Volver', categories_path, method: :get %>
 </body>
 
 </html>
