--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
 <body>
   
   <header class="container-fluid">
-    
+    <!-- ch-carousel convertion-slider -->
   <div class="row">
         <span class="img-opcion">
           <%= image_tag "opcionv.jpg", size:"120x120" %> 
@@ -28,7 +28,6 @@
              <button class="btn btn-danger">
                 <%= link_to 'Publicar', new_user_registration_path, {:style => 'text-decoration: none'} %>
             </button>
-        
         <% else %>
           <span class="left-button">
             <button class="btn btn-info">
@@ -41,6 +40,12 @@
                 <%= link_to 'Publicar', new_category_path %>
             </button>
           </span>
+
+          <% if current_user.email == 'opcionvenezuelaorg@gmail.com'   %>
+            <button class="btn btn-info">
+                <%= link_to 'Administrador', categories_path, {:style => 'text-decoration: none'} %>
+            </button>
+          <% end %>  
         <% end %>  
   
   </div>
@@ -50,7 +55,7 @@
 <div class="container-fluid square">
   <div class="row">
       
-      <nav class="navbar navbar-default">
+      <!-- <nav class="navbar navbar-default">
         <div class="container-fluid barra-categorias">
           <div class="col-offset-md-6 ">
           <ul class="nav navbar-nav">
@@ -62,13 +67,19 @@
         </div>
     </div>
       </nav>
-    
-  </div>  
+     -->
+  </div>
+
   <div class="row">
-    <div class="col-md-11 col-md-offset-1"> 
-      <%= image_tag "ideas.jpg", :class => "img-emprendedores" %>
+    <div class="col-xs-12">
+      <% @categories.each do |c|%> 
+        <%= c.title %> 
+        <%= image_tag(c.avatar1.url(:medium)) %> 
+
+      <% end %> 
     </div>
   </div>
+
 </div>
     
 <hr />
