--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
 <body>
   
   <header class="container-fluid">
-    <!-- ch-carousel convertion-slider -->
+    
   <div class="row">
         <span class="img-opcion">
           <%= image_tag "opcionv.jpg", size:"120x120" %> 
@@ -53,34 +53,57 @@
 
 
 <div class="container-fluid square">
-  <div class="row">
-      
-      <!-- <nav class="navbar navbar-default">
-        <div class="container-fluid barra-categorias">
-          <div class="col-offset-md-6 ">
-          <ul class="nav navbar-nav">
-            <li ><a href="#">Eventos</a></li>
-            <li><a href="#">Cursos</a></li>
-            <li><a href="#">Talleres</a></li>
-            <li><a href="#">Foros</a></li>
-          </ul>
-        </div>
-    </div>
-      </nav>
-     -->
-  </div>
-
-  <div class="row">
-    <div class="col-xs-12">
-      <% @categories.each do |c|%> 
-        <%= c.title %> 
+  <div class="row"> 
+          <% @categories_carousel.each do |c|%>         
+      <div id="carousel-example-generic" class="carousel slide carousel-custom" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active">
         <%= image_tag(c.avatar1.url(:medium)) %> 
-
-      <% end %> 
+    </li>
+    <li data-target="#carousel-example-generic" data-slide-to="1">
+        <%= image_tag(c.avatar2.url(:medium)) %>  
+    </li>
+    <li data-target="#carousel-example-generic" data-slide-to="2">
+        <%= image_tag(c.avatar3.url(:medium)) %>  
+    </li>
+  </ol>
+        <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+        <%= image_tag(c.avatar1.url(:medium)) %>  
+    </div>
+    <div class="item">
+        <%= image_tag(c.avatar2.url(:medium)) %> 
+    </div>
+    <div class="item">
+        <%= image_tag(c.avatar3.url(:medium)) %>   
     </div>
   </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
+
+  <% end %> 
+  
+</div>
+
 
 </div>
+
     
 <hr />
     <div class="container">
