Metiendo bootstrap a devise

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,11 +1,7 @@
 body{
-	background-color:#E94E15;
+	background-color:orange;
 }
-// espacio del header en donde esta la imagend e opcion venezuela
-// y el boton de inicio de sesion y registro
- header {
-	// background-color:#E94E15;
-}
+
 
 .img-opcion {
      text-align: center;
@@ -72,4 +68,21 @@ body{
 .public-peq {
 	width:200px;
 	height:200px;
+}
+
+
+table{
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
 }
