--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -9,24 +9,29 @@
   <link rel="stylesheet" href="assets/stylesheets/application.scss">
 </head>
 <body>
-	<header class="container-fluid">
+  <header class="container-fluid">
     
   <div class="row">
         <span class="img-opcion">
           <%= image_tag "opcionv.jpg", size:"120x120" %> 
         </span>
+            
+      <%= link_to 'Publicar', new_category_path, class: 'btn btn-danger' %>
+      <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info' %>
+      <%= link_to 'Publicaciones', categories_path, {:style => 'text-decoration: none', class: 'btn btn-info'}   %>
+      <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-info' %>
   </div>
   </header>
 
 	<%= form_for  :category, :url => {:action => :create} do |f| %>
 		<%= f.select :category_type, ['Evento', 'Foro', 'Curso', 'Taller', 'Documental', 'Otro'] %><br/>
-		<label for="">Titulo:</label><br/> <%= text_field(:category, :title) %><br/>
-		<label for="">Descripcion:</label><br/><%= text_area(:category, :description, size: "24x6") %><br/>
+		<label for="">Titulo:</label><br/> <%= text_field(:category, :title, maxlength: 85, size:30) %><br/>
+		<label for="">Descripcion:</label><br/><%= text_area(:category, :description, size: "24x6", maxlength: 300) %><br/>
 		<label for="">Fecha de inicio:</label><br/><%= date_field(:category, :start_date) %><br/>
 		<label for="">Duracion:</label><br/><%= number_field(:category, :duration) %><br/>
 		<label for="">Hora de inicio:</label><br/><%= time_field(:category, :start_hour) %><br/>
 		<label for="">Hora de finalizacion:</label><br/><%= time_field(:category, :end_hour) %><br/>
-		<label for="">Lugar:</label><br/><%= text_field(:category, :location) %><br/>
+		<label for="">Lugar:</label><br/><%= text_field(:category, :location), :maxlength => 80, :size => 40 %><br/>
 		<label for="">Precio de la entrada:</label><br/><%= number_field(:category, :cost) %><br/>
 		<label for="">Cargue la imagen 1</label><br/>
 		<%= f.file_field :avatar1 %><br/>
