--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -15,6 +15,11 @@
         <span class="img-opcion">
           <%= image_tag "opcionv.jpg", size:"120x120" %> 
         </span>
+            
+      <%= link_to 'Publicar', new_category_path, class: 'btn btn-danger' %>
+      <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info' %>
+      <%= link_to 'Publicaciones', categories_path, {:style => 'text-decoration: none', class: 'btn btn-info'}   %>
+      <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-info' %>
   </div>
   </header>
 
