--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,46 +1,52 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+      <h2 class="text-center">¡Únete a este red de emprendedores!</h2>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <div class="field">
+            <%= f.label 'Correo' %><br />
+            <%= f.email_field :email, autofocus: true, class: "form-control" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+          <div class="field">
+            <%= f.label 'Contraseña' %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+          </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+          <div class="field">
+            <%= f.label 'Confirme su contraseña' %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+          </div>
+          <div class="field">
+            <%= f.label 'Nombre' %><br />
+            <%= f.text_field :name, autofocus: true, class: "form-control" %>
+          </div>
+          <div class="field">
+            <%= f.label 'Apellido' %><br />
+            <%= f.text_field :lastname, autofocus: true, class: "form-control" %>
+          </div>
+          <div class="field">
+            <%= f.label 'Cédula de identidad o rif' %><br />
+            <%= f.text_field :cirif, autofocus: true, class: "form-control" %>
+          </div>
+          <div class="field">
+            <%= f.label 'Télefono' %><br />
+            <%= f.text_field :phone, autofocus: true, class: "form-control" %>
+          </div><br/>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+          <div class="actions">
+            <%= f.submit "Registrarme", class: "btn btn-success btn-block" %>
+          </div><br/>
+          
+        <% end %>
+          <%= link_to 'Volver a la pagina principal', welcome_index_path, class: 'btn btn-info btn-block'%>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :Name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
-  <div class="field">
-    <%= f.label :Lastname %><br />
-    <%= f.text_field :lastname, autofocus: true %>
-  </div>
-  <div class="field">
-    <%= f.label :Cirif %><br />
-    <%= f.text_field :cirif, autofocus: true %>
-  </div>
-  <div class="field">
-    <%= f.label :Phone %><br />
-    <%= f.text_field :phone, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-  
-<% end %>
-    <%= link_to 'Volver a la pagina principal', welcome_index_path   %>
+</div>
 
 <%= render "devise/shared/links" %>
