--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -19,12 +19,9 @@
         </span>
           <%= link_to 'Publicar', new_category_path, class: 'btn btn-danger' %>
 
-      <button class="btn btn-info">
-      <%= link_to 'Volver a la pagina principal', welcome_index_path, {:style => 'text-decoration: none'}   %>
-      </button>
-            <button class="btn btn-success">
-                <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete' %>
-            </button>         
+  <%= link_to 'Volver a la pagina principal', welcome_index_path, class: 'btn btn-info'   %>
+  <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-success' %>
+               
   </div>
   </header>
   <div class="col-xs-12">
