--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -28,10 +28,10 @@
 		<label for="">Titulo:</label><br/> <%= text_field(:category, :title, maxlength: 85, size:30) %><br/>
 		<label for="">Descripcion:</label><br/><%= text_area(:category, :description, size: "24x6", maxlength: 300) %><br/>
 		<label for="">Fecha de inicio:</label><br/><%= date_field(:category, :start_date) %><br/>
-		<label for="">Duracion:</label><br/><%= number_field(:category, :duration) %><br/>
+		<label for="">Dias que dura el evento:</label><br/><%= number_field(:category, :duration) %><br/>
 		<label for="">Hora de inicio:</label><br/><%= time_field(:category, :start_hour) %><br/>
 		<label for="">Hora de finalizacion:</label><br/><%= time_field(:category, :end_hour) %><br/>
-		<label for="">Lugar:</label><br/><%= text_field(:category, :location), :maxlength => 80, :size => 40 %><br/>
+		<label for="">Lugar:</label><br/><%= text_field(:category, :location, :maxlength => 80, :size => 40) %><br/>
 		<label for="">Precio de la entrada:</label><br/><%= number_field(:category, :cost) %><br/>
 		<label for="">Cargue la imagen 1</label><br/>
 		<%= f.file_field :avatar1 %><br/>
