--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,69 +35,128 @@
   </div>
   </header>
 
-
-<div class="container-fluid">
-  <div class="row"> 
-      <div id="carousel-example-generic" class="carousel slide carousel-custom" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active item2">
-        <%= image_tag(@categories_carousel.first.avatar1.url(:medium)) %> 
-    </li>
-    <li data-target="#carousel-example-generic" data-slide-to="1" class="item2">
-        <%= image_tag(@categories_carousel.first.avatar2.url(:medium)) %>  
-    </li>
-    <li data-target="#carousel-example-generic" data-slide-to="2" >
-        <%= image_tag(@categories_carousel.first.avatar3.url(:medium)) %>  
-    </li>
-  </ol>
-        <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-        <%= image_tag(@categories_carousel.first.avatar1.url(:medium)) %>  
+<% if @categories_carousel.first != nil %>
+    <div class="container-fluid">
+      <div class="row"> 
+        <div id="carousel-example-generic" class="carousel slide carousel-custom" data-ride="carousel">
+      <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active item2">
+                <span class="glyphicon glyphicon-apple"></span> 
+            </li>
+            <li data-target="#carousel-example-generic" data-slide-to="1" class="item2">
+                <span class="glyphicon glyphicon-apple"></span>  
+            </li>
+            <li data-target="#carousel-example-generic" data-slide-to="2" >
+                <span class="glyphicon glyphicon-apple"></span>  
+            </li>
+          </ol>
+            <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <%= image_tag(@categories_carousel.first.avatar1.url, class: "img-peq") %>  
+            </div>
+            <div class="item">
+                <%= image_tag(@categories_carousel.first.avatar2.url, class: "img-peq") %> 
+            </div>
+            <div class="item">
+                <%= image_tag(@categories_carousel.first.avatar3.url, class: "img-peq") %>   
+          </div>
+        </div>
+      <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
     </div>
-    <div class="item">
-        <%= image_tag(@categories_carousel.first.avatar2.url(:medium)) %> 
-    </div>
-    <div class="item">
-        <%= image_tag(@categories_carousel.first.avatar3.url(:medium)) %>   
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="js/bootstrap.min.js"></script> 
     </div>
   </div>
+<% else %>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+  <h1 class="text-center">Bienvenido! </h1>
+  <div class="container-fluid">
+      <div class="row"> 
+        <div id="carousel-example-generic" class="carousel slide carousel-custom" data-ride="carousel">
+      <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active item2">
+                <%= image_tag('bombillo.png') %> 
+            </li>
+            <li data-target="#carousel-example-generic" data-slide-to="1" class="item2">
+                <%= image_tag('bombillo.png') %> 
+            </li>
+            <li data-target="#carousel-example-generic" data-slide-to="2" >
+                <%= image_tag('bombillo.png') %> 
+            </li>
+          </ol>
+            <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <%= image_tag('bombillo.png') %> 
+            </div>
+            <div class="item">
+                <%= image_tag('bombillo.png') %> 
+            </div>
+            <div class="item">
+                <%= image_tag('bombillo.png') %> 
+          </div>
+        </div>
+   </div>
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="js/bootstrap.min.js"></script> 
+    </div>
+  </div>
+  <% end %>
 
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/bootstrap.min.js"></script>
-
-  
-</div>
-
-
-</div>
-    
 <hr />
-    <div class="container">
-      <div class="row">
-        <div class="col-md-11 col-md-offset-1">
-          <% @categories.each do |c| %>
-          <%= image_tag(c.avatar1.url(:medium), class: 'public-peq') %>  
-          <% end %>
+ <% if @categories_evento.first != nil %>
+  <div class="container">
+    <h1>Eventos</h1>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav" data-interval="false">
+          <div class="carousel-inner">
+            <div class="item active">
+              <div class="item">
+
+
+              <% @categories_evento.first(6).each do |e|%>
+                <% if user_signed_in? %>
+                  <% @mylink = "/categories/" + e.id.to_s %>
+                <% else %>
+                  <% @mylink = "/categories1/" + e.id.to_s %>
+                <% end %>
+                  <div class="col-xs-12 col-sm-6 col-md-2">
+                    <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" >
+                    <%= image_tag(e.avatar1.url, :class => "img-responsive") %>
+                    </a>
+                  </div>
+              <% end %> 
+              </div>
+            </div>
+
+
+
+         <a rel="nofollow" rel="noreferrer"class="left carousel-control" href="#carousel-tilenav" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+         <a rel="nofollow" rel="noreferrer"class="right carousel-control" href="#carousel-tilenav" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+          </div>
         </div>
       </div>
     </div>
+  <% end %>
+   
+</div>
+
 <hr />
-
-
 </body>
 </html>
