--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -45,8 +45,25 @@ body{
 	width:100%;
 }
 
-
-
+.pretty-input::-webkit-file-upload-button {
+        display: none;
+    }
+    .pretty-input::before {
+       content: 'Sube una imagen';
+       color: #fff;
+       width: 150px;
+       height: 45px;
+       line-height: 45px;
+       text-align: center;
+       text-transform: uppercase;
+       display: inline-block;
+       border-radius: 3px;
+       background: green;
+       padding: 5px 8px;
+       outline: none;
+       -webkit-user-select: none;
+       cursor: pointer;
+     }
 // <html>
 // <head>
 //   <meta charset="UTF-8">
