--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,10 +1,15 @@
-= form_for @category do |f|
-  - if @category.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@category.errors.count, "error")} prohibited this category from being saved:"
-      %ul
-        - @category.errors.full_messages.each do |message|
-          %li= message
-
-  .actions
-    = f.submit 'Save'
+<%= form_for @category do |f| %>
+    <% if @category.errors.any? %>
+      <div id="error_explanation">
+        <h2>
+          <%= pluralize(@category.errors.count, "error") %> prohibited
+          this category from being saved:
+        </h2>
+        <ul>
+          <% @category.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+<% end %>
+<% end %>
