--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -10,47 +10,74 @@
 </head>
 
 <body>
-<% if current_user.email == 'opcionvenezuelaorg@gmail.com' %>
-<header class="container-fluid">
-    
-  <div class="row">
-        <span class="img-opcion">
-          <%= image_tag "opcionv.jpg", size:"120x120" %> 
-        </span>
-          <%= link_to 'Publicar', new_category_path, class: 'btn btn-danger' %>
 
-  <%= link_to 'Volver a la pagina principal', welcome_index_path, class: 'btn btn-info'   %>
-  <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-success' %>
-               
+<nav class="navbar navbar-custom navbar-fixed-top ">
+  <div class="container-fluid ">
+    <div class="row">
+      <div>
+        <%= image_tag "opcionv.jpg", size:"50x50", class: "img-opcion col-xs-1" %>
+          <% if !user_signed_in?  %>
+            <%= link_to 'Iniciar sesion', new_user_session_path, class: 'btn btn-info '  %>
+            <%= link_to 'Registrarse', new_user_registration_path, class: 'btn btn-info ' %>
+            <%= link_to 'Publicar', new_user_registration_path, class: 'btn btn-info ' %>
+          <% else %>
+            <% if current_user.email == 'opcionvenezuelaorg@gmail.com'   %>
+              <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info ' %>
+              <%= link_to 'Publicar', new_category_path, class: 'btn btn-success ' %>
+              <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger ' %>
+
+            <% else %>
+              <a href=/categories class="btn btn-info">Hi, <%= current_user.name %></a>
+              <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger col-xs-offset-5 col-xs-7 col-sm-6 col-sm-offset-6 col-md-offset-6 col-md-6 col-lg-offset-7 col-lg-5' %>
+              <%= link_to 'Publicar', new_category_path, class: 'btn btn-success col-xs-offset-5 col-xs-7 col-sm-6 col-sm-offset-6 col-md-offset-6 col-md-6 col-lg-offset-7 col-lg-5' %>
+            <% end %>  
+          <% end %>  
+      <!-- fin del if  -->
+      </div>
+    </div>
   </div>
-  </header>
+</nav>
+<br/>
+<br/>
+<br/>
+<% if current_user.email == 'opcionvenezuelaorg@gmail.com' %>
   <div class="col-xs-12">
     <table class="table">
       <thead>
         <tr>
           <th style="text-align: center"><h4 style="color:blue">Titulo</h4> </th>
           <th style="text-align: center"> <h4 style="color:blue">Usuario</h4> </th>
-          <th style="text-align: center"><h4 style="color:blue">Localidad</h4> </th>
-          <th style="text-align: center"><h4 style="color:blue">Duracion</h4> </th>
+          <th style="text-align: center"><h4 style="color:blue">1er Imagen</h4> </th>
           <th style="text-align: center">
-          <a href=/categories?key=Prioridad-Up>
-          <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
-          <h4 style="color:blue">Prioridad</h4>
-          <a href=/categories?key=Prioridad-Down>
-          <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a></th>
+            <a href=/categories?key=Prioridad-Up>
+            <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
+            <h4 style="color:blue">Prioridad</h4>
+            <a href=/categories?key=Prioridad-Down>
+            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a>
+          </th>
           
           <th style="text-align: center">
-          <a href=/categories?key=FechadeInicio-Up>
-          <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
-          <h4 style="color:blue">Fecha de inicio</h4>
-          <a href=/categories?key=FechadeInicio-Down>
-          <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a></th>
+            <a href=/categories?key=Tipo-Up>
+            <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
+            <h4 style="color:blue">Tipo de evento</h4>
+            <a href=/categories?key=Tipo-Down>
+            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a>
+          </th>
+
           <th style="text-align: center">
-          <a href=/categories?key=Status-Up>
-          <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
-          <h4 style="color:blue">Status</h4>
-          <a href=/categories?key=Status-Down>
-          <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a></th>
+            <a href=/categories?key=FechadeInicio-Up>
+            <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
+            <h4 style="color:blue">Fecha de inicio</h4>
+            <a href=/categories?key=FechadeInicio-Down>
+            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a>
+          </th>
+          <th style="text-align: center">
+            <a href=/categories?key=Status-Up>
+            <span class="glyphicon glyphicon-arrow-up"  aria-hidden="true"></span></a>
+            <h4 style="color:blue">Status</h4>
+            <a href=/categories?key=Status-Down>
+            <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a>
+          </th>
         </tr>
       </thead>
       <tbody>
@@ -64,13 +91,18 @@
             <%= category.user.name %>
           </td>         
           <td class="text-center">
-            <%= category.location %>
-          </td>
-          <td class="text-center">
-            <%= category.duration %>
+          <% if category.avatar1.url != "/images/" %>
+            <%= image_tag(category.avatar1(:thumb)) %>
+          <% else %>
+            <%= image_tag("sin_imagen.jpg", size:"100x100") %>
+  
+          <% end %>  
           </td>
           <td class="text-center">
             <%= category.priority %>
+          </td>
+          <td class="text-center">
+            <%= category.category_type %>
           </td>
           <td class="text-center">
             <%= category.start_date %>
@@ -84,9 +116,9 @@
           </td>
 
           <td class="text-right">
-            <%= link_to 'Show', category_path(category), class: 'btn btn-info' %>
-            <%= link_to 'Edit', edit_category_path(category), class: 'btn btn-warning' %>
-            <%= link_to 'Destroy', category_path(category), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger' %>
+            <%= link_to '', category_path(category), class: 'btn btn-info glyphicon glyphicon-eye-open' %>
+            <%= link_to '', edit_category_path(category), class: 'btn btn-warning glyphicon glyphicon-pencil' %>
+            <%= link_to '', category_path(category), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger glyphicon glyphicon-remove' %>
           </td>
         </tr>
       <% end %>
