--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -9,39 +9,62 @@
   <link rel="stylesheet" href="assets/stylesheets/application.scss">
 </head>
 <body>
+		<%= render 'form', category: @category %>
   <header class="container-fluid">
-    
-  <div class="row">
-        <span class="img-opcion">
-          <%= image_tag "opcionv.jpg", size:"120x120" %> 
-        </span>
-            
-      <%= link_to 'Publicar', new_category_path, class: 'btn btn-danger' %>
-      <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info' %>
-      <%= link_to 'Publicaciones', categories_path, {:style => 'text-decoration: none', class: 'btn btn-info'}   %>
-      <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-info' %>
-  </div>
+			<nav class="navbar navbar-custom navbar-fixed-top ">
+			  <div class="container-fluid ">
+			    <div class="row">
+			      <div>
+			        <%= image_tag "opcionv.jpg", size:"50x50", class: "img-opcion col-xs-1" %>
+			      		<%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info' %>
+			          <%= link_to 'Nueva publicacion', new_category_path, class: 'btn btn-success' %>
+			      		<%= link_to 'Publicaciones', categories_path, {:style => 'text-decoration: none', class: 'btn btn-primary'} %>
+			      		<%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger' %>
+			      </div>
+			    </div>
+			  </div>
+			</nav>
   </header>
+<br/>
+<br/>
+<div class="container ">
+	<div class="row">
+		<h2 class="text-center">Agrega tu publicacion</h2>
+			<%= form_for  :category, :url => {:action => :create} do |f| %>
+		<div class="form-group text-center">
+				<%= f.select :category_type, ['Evento', 'Foro', 'Curso', 'Taller', 'Documental', 'Otro']%>
+				<label for="" style = "text-indent:20px">Titulo:&nbsp;&nbsp;</label> <%= text_field(:category, :title, maxlength: 85, size:30, style: 'text-indent:20px')%>
+				<label for="" style = "text-indent:20px">Lugar:&nbsp;&nbsp;</label><%= text_field(:category, :location, :maxlength => 80, :size => 40, style: 'text-indent') %>
+		</div>		
+		<div class="form-group text-center">
+				<label for="">Descripcion:</label><br/><%= text_area(:category, :description, size: "24x12", maxlength: 300, class: "form-control") %>
+		</div>
+		<div class="form-group text-center">
+			
+				<label for="" style = "text-indent:20px">Fecha de inicio:&nbsp;&nbsp;</label><%= date_field(:category, :start_date) %>
+				<label for="" style = "text-indent:20px">Dias que dura el evento:&nbsp;&nbsp;</label><%= number_field(:category, :duration) %>
+				<label for="" style = "text-indent:20px">Hora de inicio:&nbsp;&nbsp;</label><%= time_field(:category, :start_hour) %>
+				<label for="" style = "text-indent:20px">Hora de finalizacion:&nbsp;&nbsp;</label><%= time_field(:category, :end_hour) %>
+		</div>
+		<div class="form-group text-center">
+				<label for="" style = "text-indent:20px">Teléfono:&nbsp;&nbsp;</label><%= number_field(:category, :phone, max:9999999999, :size => 20) %>
+				<label for="" style = "text-indent:20px">Precio de la entrada:&nbsp;&nbsp;</label><%= number_field(:category, :cost) %>
+		</div>
+		<div class="form-group text-center">
+				<label for="" style = "text-indent:20px">
+					<%= f.file_field :avatar1, value: "Elegir", class: "pretty-input" %>
+				</label>
+				<label for="" style = "text-indent:20px">
+				<%= f.file_field :avatar2, class: "pretty-input" %>
+				</label>
+				<label for="" style = "text-indent:20px">
+				<%= f.file_field :avatar3, class: "pretty-input" %>
+				</label>
+		</div>
 
-	<%= form_for  :category, :url => {:action => :create} do |f| %>
-		<%= f.select :category_type, ['Evento', 'Foro', 'Curso', 'Taller', 'Documental', 'Otro'] %><br/>
-		<label for="">Titulo:</label><br/> <%= text_field(:category, :title, maxlength: 85, size:30) %><br/>
-		<label for="">Descripcion:</label><br/><%= text_area(:category, :description, size: "24x6", maxlength: 300) %><br/>
-		<label for="">Fecha de inicio:</label><br/><%= date_field(:category, :start_date) %><br/>
-		<label for="">Dias que dura el evento:</label><br/><%= number_field(:category, :duration) %><br/>
-		<label for="">Hora de inicio:</label><br/><%= time_field(:category, :start_hour) %><br/>
-		<label for="">Hora de finalizacion:</label><br/><%= time_field(:category, :end_hour) %><br/>
-		<label for="">Lugar:</label><br/><%= text_field(:category, :location, :maxlength => 80, :size => 40) %><br/>
-		<label for="">Teléfono:</label><br/><%= number_field(:category, :phone, max:9999999999, :size => 20) %><br/>
-		<label for="">Precio de la entrada:</label><br/><%= number_field(:category, :cost) %><br/>
-		<label for="">Cargue la imagen 1</label><br/>
-		<%= f.file_field :avatar1 %><br/>
-		<label for="">Cargue la imagen 2</label><br/>
-		<%= f.file_field :avatar2 %><br/>
-		<label for="">Cargue la imagen 3</label><br/>
-		<%= f.file_field :avatar3 %><br/>
-
-		<%= f.submit %>
-	<% end %>
+				<%= f.submit 'Guardar', class: "btn btn-primary" %>
+			<% end %>
+	</div>
+</div>
 </body>
 </html>
