--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -118,7 +118,7 @@
           <td class="text-right">
             <%= link_to '', category_path(category), class: 'btn btn-info glyphicon glyphicon-eye-open' %>
             <%= link_to '', edit_category_path(category), class: 'btn btn-warning glyphicon glyphicon-pencil' %>
-            <%= link_to '', category_path(category), method: :delete, data: {confirm: 'Are you sure?'}, class: 'btn btn-danger glyphicon glyphicon-remove' %>
+            <%= link_to '', category_path(category), method: :delete, data: {confirm: '¿Está seguro?'}, class: 'btn btn-danger glyphicon glyphicon-remove' %>
           </td>
         </tr>
       <% end %>
