--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -11,45 +11,107 @@
 <body>
 	<header class="container-fluid">
     
-  <div class="row">
-        <span class="img-opcion">
-          <%= image_tag "opcionv.jpg", size:"120x120" %> 
-        </span>
-            
-      <%= link_to 'Publicar', new_category_path, class: 'btn btn-danger' %>
-      <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info' %>
-      <%= link_to 'Publicaciones', categories_path, {:style => 'text-decoration: none', class: 'btn btn-info'}   %>
-      <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-info' %>
+  
+<nav class="navbar navbar-custom navbar-fixed-top ">
+  <div class="container-fluid ">
+    <div class="row">
+      <div>
+        <%= image_tag "opcionv.jpg", size:"50x50", class: "img-opcion col-xs-1" %>
+            <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-info ' %>
+              <%= link_to 'Publicar', new_category_path, class: 'btn btn-success ' %>
+			      	<%= link_to 'Publicaciones', categories_path,  class: 'btn btn-primary' %>
+              <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger ' %>
+      </div>
+    </div>
   </div>
-  </header>
+</nav>
+<br/>
+<br/>
+<br/>
 
-		<%= @category.category_type %><br/>
-		<label for="">Titulo:</label><br/> <%= @category.title %><br/>
-		<label for="">Descripcion:</label><br/><%= @category.description %><br/>
-		<label for="">Fecha de inicio:</label><br/><%= @category.start_date %><br/>
-		<label for="">Duracion:</label><br/><%= @category.duration %><br/>
-		<label for="">Hora de inicio:</label><br/><%= @category.start_hour %><br/>
-		<label for="">Hora de finalizacion:</label><br/><%= @category.end_hour %><br/>
-		<label for="">Lugar:</label><br/><%= @category.location %><br/>
-		<label for="">Precio de la entrada:</label><br/><%= @category.cost %><br/>
-		<h1>Avatar 1</h1>
-			<div class="round-image-50">
-				<%= image_tag(@category.avatar1.url(:thumb)) %>
-				
-			</div>
-		<h1>Avatar 2</h1>	
-			<div class="round-image-50">
-				<%= image_tag(@category.avatar2.url(:thumb)) %>					
-			</div>
-		<h1>Avatar 3</h1>	
-			<div class="round-image-50">
-				<%= image_tag(@category.avatar3.url(:thumb)) %>					
-			</div>
-			<% if current_user.email == 'opcionvenezuelaorg@gmail.com'   %>
-        <label for="">Status de la publicacion:</label><br/><%= @category.status %><br/>
-        <label for="">Prioridad de la publicacion:</label><br/><%= @category.priority %><br/>
-      <% end %> 
-	<%= button_to 'Volver', categories_path, method: :get %>
+  </header>
+  <div class="row">
+  	
+<div class="col-xs-12 col-sm-6">
+	
+			<h1> <%= @category.title %></h1>
+		<div class="form-group text-center">
+			<label> Tipo:</label> <%= @category.category_type %>	
+			<label for="">Lugar:</label><%= @category.location %>
+		</div>
+		<div class="form-group text-center">
+			<label for="">Descripcion:</label><%= @category.description %>
+		</div>
+		<div class="form-group text-center">
+			<label for="">Fecha de inicio:</label><%= @category.start_date %>
+			<label for="">Duracion:</label><%= @category.duration %>
+			<label for="">Hora de inicio:</label><%= @category.start_hour %>
+			<label for="">Hora de finalizacion:</label><%= @category.end_hour %>
+			<label for="">Precio de la entrada:</label><%= @category.cost %>
+		</div>
+</div>
+<div class="col-xs-12 col-sm-6">
+	
+		<div class="container-fluid">
+      <div class="row"> 
+        <div id="carousel-example-generic3" class="carousel slide carousel-custom" data-ride="carousel">
+      <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic3" data-slide-to="0" class="active ">
+            </li>
+            <li data-target="#carousel-example-generic3" data-slide-to="1" class="">
+            </li>
+            <li data-target="#carousel-example-generic3" data-slide-to="2" class="">
+            </li>
+          </ol>
+            <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+            <div class="col-xs-12">
+              <% if @category.avatar1.url != "/images/" %>
+	            	<%= image_tag(@category.avatar1.url, :class => "img-responsive ") %>
+	        		<% else %>
+	            	<%= image_tag("sin_imagen.jpg", :class => "img-responsive ") %>
+	        		<% end %>		 
+            </div>
+            </div>
+            <div class="item">
+            <div class="col-xs-12">
+              <% if @category.avatar2.url != "/images/" %>
+	            	<%= image_tag(@category.avatar2.url, :class => "img-responsive ") %>
+	        		<% else %>
+	            	<%= image_tag("sin_imagen.jpg", :class => "img-responsive ") %>
+	        		<% end %>		 
+            </div>
+            </div>
+            <div class="item">
+            <div class="col-xs-12">
+                <% if @category.avatar3.url != "/images/" %>
+	            	<%= image_tag(@category.avatar3.url, :class => "img-responsive ") %>
+	        		<% else %>
+	            	<%= image_tag("sin_imagen.jpg", :class => "img-responsive ") %>
+	        		<% end %>		    
+          </div>
+          </div>
+        </div>
+      <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic3" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic3" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+    </div>
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="js/bootstrap.min.js"></script> 
+    </div>
+  </div>
+</div>		
+  </div>
 </body>
 
 </html>
