--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -31,9 +31,8 @@
             <%= link_to 'Publicar', new_user_registration_path, class: 'btn btn-info ' %>
           <% else %>
             <% if current_user.email == 'opcionvenezuelaorg@gmail.com'   %>
-              <a href=/categories class="btn btn-info">Hi, <%= current_user.name %></a>
+              <a href=/categories class="btn btn-primary">Hola administrador</a>
               <%= link_to 'Publicar', new_category_path, class: 'btn btn-success ' %>
-              <%= link_to 'Administrador', categories_path, class: 'btn btn-primary '%>
               <%= link_to 'Cerrar Sesion', destroy_user_session_path, method: 'delete', class: 'btn btn-danger ' %>
             <% else %>
               <a href=/categories class="btn btn-info">Hi, <%= current_user.name %></a>
@@ -46,13 +45,13 @@
     </div>
   </div>
 </nav>
-<br/>
+
 
 <hr />
 <div class="container">
   <div class="row">
-    <di class="col-lg-offset-10 col-lg-2">
-      
+      <h1 class="text-center"><em>Bienvenido a esta gran comunidad de emprendedores!</em></h1>
+    <div class="col-lg-offset-10 col-lg-2">
     <div class="dropdown">
       <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Buscar
         <span class="caret"></span>
@@ -84,7 +83,7 @@
           </a>
         </li>
       </ul>
-      </di>
+      </div>
     </div>
   </div>
 </div>
@@ -108,17 +107,17 @@
           <div class="carousel-inner" role="listbox">
             <div class="item active">
             <div class="col-xs-12">
-                <%= image_tag(@categories_carousel.first.avatar1.url) %>  
+                <%= image_tag(@categories_evento.first.avatar1.url) %>  
             </div>
             </div>
             <div class="item">
             <div class="col-xs-12">
-                <%= image_tag(@categories_carousel.first.avatar2.url) %> 
+                <%= image_tag(@categories_evento.first.avatar2.url) %> 
             </div>
             </div>
             <div class="item">
             <div class="col-xs-12">
-                <%= image_tag(@categories_carousel.first.avatar3.url) %>   
+                <%= image_tag(@categories_evento.first.avatar3.url) %>   
           </div>
           </div>
         </div>
@@ -139,43 +138,52 @@
     </div>
   </div>
 <% else %>
-
-  <h1 class="text-center">Bienvenido! </h1>
-  <div class="container-fluid">
+<div class="container-fluid">
       <div class="row"> 
-        <div id="carousel-example-generic" class="carousel slide carousel-custom" data-ride="carousel">
+        <div id="carousel-example-generic2" class="carousel slide carousel-custom" data-ride="carousel">
       <!-- Indicators -->
           <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active item2">
-                <%= image_tag('bombillo.png') %> 
+            <li data-target="#carousel-example-generic2" data-slide-to="0" class="active ">
             </li>
-            <li data-target="#carousel-example-generic" data-slide-to="1" class="item2">
-                <%= image_tag('bombillo.png') %> 
+            <li data-target="#carousel-example-generic2" data-slide-to="1" class="">
             </li>
-            <li data-target="#carousel-example-generic" data-slide-to="2" >
-                <%= image_tag('bombillo.png') %> 
+            <li data-target="#carousel-example-generic2" data-slide-to="2" class="">
             </li>
           </ol>
             <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <%= image_tag('bombillo.png') %> 
+            <div class="col-xs-12 text-center">
+                <%= image_tag("mark.jpg") %>  
+            </div>
             </div>
             <div class="item">
-                <%= image_tag('bombillo.png') %> 
+            <div class="col-xs-12 text-center">
+                <%= image_tag("bill.jpg") %> 
+            </div>
             </div>
             <div class="item">
-                <%= image_tag('bombillo.png') %> 
+            <div class="col-xs-12 text-center">
+                <%= image_tag("steve.jpg") %>   
+          </div>
           </div>
         </div>
-   </div>
+      <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic2" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic2" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+    </div>
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <!-- Include all compiled plugins (below), or include individual files as needed -->
       <script src="js/bootstrap.min.js"></script> 
     </div>
-  </div>
-  <% end %>
+  </div>  <% end %>
 
  <% if @categories_evento.first != nil %>
 <!-- si HAY imagenes cargadas en las publicaciones de abajo -->  
@@ -204,7 +212,7 @@
 
             <% for i in 3..@categories_evento.length-1 do %>
               <% if i % 3 == 0  %>
-              <div class="item">
+              <div class="item text-center">
               <%= "i:#{i}" %>
               <% @aux = i %>
               <% @aux2 = @aux + 2 %>
